#11988 Altera consulta de vendedores do supervisor
Era retornado por cidade, alterado para utilizar a hierarquia