@@ -8,20 +8,44 @@ import br.com.xbrain.autenticacao.modules.usuario.repository.UsuarioRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.util.Arrays;
+import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 public class SupervisorService {
 
+    private static final int COLUNA_USUARIO_ID = 0;
+    private static final int COLUNA_USUARIO_NOME = 1;
+
     @Autowired
     private UsuarioRepository usuarioRepository;
 
-    public List<UsuarioResponse> getAssistentesEVendedoresD2dDaCidadeDoSupervisor(Integer supervisorId) {
+    public List<UsuarioResponse> getAssistentesEVendedoresD2dDoSupervisor(Integer supervisorId) {
+        return Stream.concat(
+                getAssistentesDoSupervisor(supervisorId).stream(),
+                getVendedoresDoSupervisor(supervisorId).stream())
+                .sorted(Comparator.comparing(UsuarioResponse::getNome))
+                .collect(Collectors.toList());
+    }
+
+    private List<UsuarioResponse> getAssistentesDoSupervisor(Integer supervisorId) {
         return usuarioRepository.getUsuariosDaMesmaCidadeDoUsuarioId(
                 supervisorId,
-                Arrays.asList(CodigoCargo.ASSISTENTE_OPERACAO, CodigoCargo.VENDEDOR_OPERACAO),
+                List.of(CodigoCargo.ASSISTENTE_OPERACAO),
                 ECanal.D2D_PROPRIO);
+    }
+
+    private List<UsuarioResponse> getVendedoresDoSupervisor(Integer supervisorId) {
+        return usuarioRepository
+                .getSubordinadosPorCargo(supervisorId, CodigoCargo.VENDEDOR.name())
+                .stream()
+                .map(row -> new UsuarioResponse(
+                        (Integer) row[COLUNA_USUARIO_ID],
+                        (String) row[COLUNA_USUARIO_NOME],
+                        CodigoCargo.VENDEDOR_OPERACAO))
+                .collect(Collectors.toList());
     }
 
     public List<UsuarioResponse> getSupervisoresPorAreaAtuacao(AreaAtuacao areaAtuacao,
